# Flask-TTS

./: .gitignore  README.md  app.py  pyproject.toml
static/css/: index.css  result.css
static/js/: result.js
templates/: base.html  index.html  result.html
